Fix some deprecated syntax